--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: untitled
+name: eshop
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -47,6 +47,7 @@ dependencies:
   image_picker:
   path_provider:
   url_launcher: ^6.1.7
+  get:
 
 
 dev_dependencies:
